CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
PROJECT(peelocpp_path CXX)

SET(CMAKE_CXX_STANDARD 11)

SET(EXECUTABLE_OUTPUT_PATH "${CMAKE_BINARY_DIR}/lib")
SET(LIBRARY_OUTPUT_PATH "${CMAKE_BINARY_DIR}/lib")

INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/include")
LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})

ADD_SUBDIRECTORY(src)
